@@ -8,6 +8,7 @@ Fixed bug 1099: UseArraysAsList false positives
 Fixed bug 1102: False positive: shift operator parenthesis
 Fixed bug 1104: IdempotentOperation false positive
 Fixed bug 1107: PMD 5.0.4 couldn't parse call of parent outer java class method from inner class
+Fixed bug 1069: Eclipse plugin does not accept project-local config
 Fixed bug 1111: False positive: Useless parentheses
 Fixed bug 1114: CPD - Tokenizer not initialized with requested properties
 Fixed bug 1118: ClassCastException in pmd.lang.ecmascript.ast.ASTElementGet
